--- a/Docs/Changelogs/1.1.0.md
+++ b/Docs/Changelogs/1.1.0.md
@@ -1,7 +1,13 @@
+**General**:
+
 - Reworked the way authentication works in all extractors.
+
+**Extractors**:
 
 - Added support for Reddit authentication.
 - Expanded exception handling in the Reddit extractor.
 - The Reddit extractor now handles extracting posts made by deleted users and suspended users.
+
+**Processing**:
 
 - Added some more processing for story titles.
