Added a simple extractor for Adult-FanFiction.org.

--- a/Docs/Changelogs/1.2.0.md
+++ b/Docs/Changelogs/1.2.0.md
@@ -2,6 +2,10 @@
 
 - Links (anchors) are now preserved in output files.
 
+**Extractors**:
+
+- Added an extractor for [AdultFanFiction](http://www.adult-fanfiction.org/html-index.php).
+
 **Processing:**
 
 - Improved horizontal line recognition.
