Minor changes in changelog formatting.

--- a/Docs/Changelogs/1.2.0.md
+++ b/Docs/Changelogs/1.2.0.md
@@ -13,5 +13,5 @@
 
 **Stuff:**
 
-- Reformatted Style Guidelines as Markdown.
-- Reformatted Changelogs as Markdown.
+- Reformatted *Style Guidelines* as Markdown.
+- Reformatted changelogs as Markdown.
