Updated the changelog and the readme.

--- a/Docs/Changelogs/1.4.0.md
+++ b/Docs/Changelogs/1.4.0.md
@@ -1,6 +1,6 @@
 **Extractors**:
 
-- Added a text file extractor: you can now put the HTML-formatted story and text file and use **fiction-dl** to auto-format it as ODT, PDF etc.
+- Added a text file extractor: you can now put the HTML-formatted story in a raw text file and use **fiction-dl** to auto-format it as ODT, PDF etc.
 
 **Processing:**
 
