Updated the changelog.

--- a/Docs/Changelogs/1.4.0.md
+++ b/Docs/Changelogs/1.4.0.md
@@ -15,3 +15,4 @@
 
 - Removed one unneeded dependency (the *fitz* package).
 - Updated the readme: mentioned some libraries that might need to be installed on Linux systems.
+- Fixed some typos.
